// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Divider Dashed 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <hr
      class="sc-himrzO kVxDcQ sc-cCsOjp lhBdCS"
      type="dashed"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <hr
      class="sc-himrzO dDBpFK sc-cCsOjp lhBdCS"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider With Custom Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <hr
      class="sc-himrzO dCLeSr sc-cCsOjp gBFNXm"
      color="#ccc"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider With Text Content 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds gNjzDq sc-hHLeRK qjMas sc-cCsOjp lhBdCS"
    >
      <hr
        class="sc-himrzO sc-gXmSlM kVxDcQ kBpmXZ"
        type="dashed"
      />
      <span
        class="sc-ivTmOn jVwBQP sc-llJcti bwLrqm"
      >
        some text
      </span>
      <hr
        class="sc-himrzO sc-gXmSlM kVxDcQ kBpmXZ"
        type="dashed"
      />
    </div>
  </div>
</div>
`;
